Updates scss template to comply with style lint

--- a/generators/app/templates/_component.scss
+++ b/generators/app/templates/_component.scss
@@ -1,5 +1,5 @@
 .<%= className %> {
-
+	/* styles */
 }
 
 <% if (modifiers) { %>
@@ -8,5 +8,5 @@
  */
 <% modifiers.forEach(function(modifier){ %>
 .<%= className %>--<%= modifier %> {
-
+	/* styles */
 }<% }); %><% } %>
