Updates component twig template with proper attrs filter

--- a/generators/app/templates/_component.twig
+++ b/generators/app/templates/_component.twig
@@ -1,3 +1,3 @@
-<div class="<%= className %> {{ modifiers|join(' ') }}" {{ html_attrs|join(' ') }}<% if (data) { %> <%= data %><% } %>>
+<div class="<%= className %> {{ modifiers|join(' ') }}" {{ html_attrs|attrs }}<% if (data) { %> <%= data %><% } %>>
 
 </div>
